--- a/css/poke-index.css
+++ b/css/poke-index.css
@@ -144,6 +144,7 @@ button:hover, .search-btn:hover, .close-modal:hover, #start-compare-btn:hover, #
 
 .close-modal, #favorite-btn {
     margin-top: 1rem;
+    margin-bottom: 0;
     padding: 0.5rem 1rem;
 }
 
